--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "seed": "node seeders/seed.js"
+    "seed": "node seeder/seed.js"
   },
   "keywords": [],
   "repository": {
