--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
   },
   "keywords": [],
   "repository": {
-  "type": "git",
-  "url": "git+https://github.com/trishamasbate/book-loom.git"
+    "type": "git",
+    "url": "git+https://github.com/trishamasbate/book-loom.git"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-  "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3"
   },
   "bugs": {
-  "url": "https://github.com/trishamasbate/book-loom/issues"
+    "url": "https://github.com/trishamasbate/book-loom/issues"
   },
   "homepage": "https://github.com/trishamasbate/book-loom#readme",
   "dependencies": {
-    "express": "^4.17.1",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.19.2",
     "express-handlebars": "^5.3.4",
-    "express-session": "^1.17.2",
-    "sequelize": "^6.6.5",
+    "express-session": "^1.18.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
-    "dotenv": "^10.0.0",
-    "socket.io": "^4.1.3",
-    "bcrypt": "^5.0.1"
+    "sequelize": "^6.6.5",
+    "socket.io": "^4.1.3"
   }
 }
